# nix-interpreter

./: Cargo.toml
src/: cli.rs  lib.rs  main.rs
src/lexer/: chars.rs  lexer.rs  mod.rs  tests_lexer.rs  tokens.rs
src/parser/: ast.rs  mod.rs  parser.rs  tests_parser.rs
src/runtime/: env.rs  interpreter.rs  mod.rs
