[package]
name = "toy_nix_interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
maybe-owned = "0.3.4"

[lib]
name = "nix_interpreter_lib"
path = "./src/lib.rs"

[[bin]]
name = "nix_interpreter_cli"
path = "./src/main.rs"
